--- a/package.json
+++ b/package.json
@@ -10,9 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3",
+    "body-parser": "^1.18.3",
+    "connect": "^3.6.6",
+    "express": "^4.16.4",
+    "express-fileupload": "^1.0.0",
     "express-handlebars": "^3.0.0",
     "express-handlebars-sections": "^1.0.1",
+    "handlebars": "^4.0.12",
+    "moment": "^2.22.2",
+    "multer": "^1.4.1",
     "mysql": "^2.15.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.5"
   }
 }
