--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "express-handlebars-sections": "^1.0.1",
-    "mysql": "^2.15.0"
+    "mysql": "^2.15.0",
+    "mysql2": "^1.6.1",
+    "nodemon": "^1.18.5",
+    "sequelize": "^4.41.0"
   }
 }
