--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "express-fileupload": "^1.0.0",
     "express-handlebars": "^3.0.0",
     "express-handlebars-sections": "^1.0.1",
+    "express-mysql-session": "^1.3.0",
+    "express-session": "^1.15.6",
     "handlebars": "^4.0.12",
+    "md5": "^2.2.1",
     "moment": "^2.22.2",
     "multer": "^1.4.1",
     "mysql": "^2.15.0"
